2004-2-29 Brent Welch <welch@panasas.com>
        * bin/httpd.tcl: removed compatibility warning message
        * lib/auth.tcl: Fixed to tolerate missing group and user files
        * htdocs/debug/.tclaccess: added this to provide easier to
        control access to the /debug URL.
        * custom/dodirs.tcl: fixed this so it doesn't do "cd" and
        only looks through subdirectories that contain startup.tcl
        For example, this skips the CVS directory
        * contrib/mkweb_05.tcl: metakit admin interface by Stefan Vogel
        * htdocs/cgi-bin/wiki.cgi: sample CGI for wikit
 
2004-2-25 Colin McCormack <colin@field.medicine.adelaide.edu.au>
       * lib/template.tcl
       * lib/subst.tcl
	templates can be directories, their value is from dir.tml
	index.html now depends on the whole containing directory
        * lib/*
	removed some incorrect copyright lines with my name

2004-2-09 Colin McCormack <colin@field.medicine.adelaide.edu.au>
       * lib/httpd.tcl
       * lib/auth.tcl
       * lib/digest.tcl
       * htdocs/access/digest/*
       Added digest authentication per http://www.ietf.org/rfc/rfc2617.txt
	
2004-1-13 Brent Welch <welch@panasas.com>
        * README
        * VERSION
        * configure.in
        * DIST_build/DIST
        * DIST_build/DIST.exp
        * DIST_build/Makefile.boot
        * DIST_build/README
        * lib/version.tcl
        * bin/httpd.tcl
        Version updates in preparation for a 3.5.0 release

2003-11-04 Colin McCormack <colin@field.medicine.adelaide.edu.au>
       * preparing Debian package for tclhttpd
       * fixed innocuous bug causing noise on loading libtml under
       Debian package
	
2003-10-28 Colin McCormack <colin@field.medicine.adelaide.edu.au>
       * Fixed sf.net bug [804488] Redirect_To does not work in .tml
        Added suggested patch to template.tcl
       * Added Http_AddHeaders and Http_RemoveHeaders, and
       modified HttpRespondHeader so users can add http headers